--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^19",
     "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.21",
+    "critters": "^0.0.23",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
