--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,25 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components": ["./src/components"],
+      "@/components/*": ["./src/components/*"],
+      "@/hooks": ["./src/hooks"],
+      "@/hooks/*": ["./src/hooks/*"],
+      "@/lib": ["./src/lib"],
+      "@/lib/*": ["./src/lib/*"],
+      "@/types": ["./src/types"],
+      "@/types/*": ["./src/types/*"],
+      "@/data": ["./src/data"],
+      "@/data/*": ["./src/data/*"],
+      "@/styles": ["./src/styles"],
+      "@/styles/*": ["./src/styles/*"],
+      "@/utils": ["./src/lib/utils"],
+      "@/utils/*": ["./src/lib/utils/*"],
+      "@/config": ["./src/lib/config"],
+      "@/config/*": ["./src/lib/config/*"],
+      "@/constants": ["./src/lib/constants"],
+      "@/constants/*": ["./src/lib/constants/*"]
     },
     "typeRoots": ["./node_modules/@types", "./types"]
   },
