--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "next": "15.2.4",
